finished ElectronicDisplay question mark feature and bumping the +/- vol knob in MediaPlayer, fixed minor spacing issues for end game state #8

--- a/src/components/GuessTheSong/GuessTheSong.css
+++ b/src/components/GuessTheSong/GuessTheSong.css
@@ -29,8 +29,7 @@
     flex-direction: row;
 } */
 
-.ButtonsContainer {
-    /* background: red; */
+/* .ButtonsContainer {
     width: 50%;
     height: 100%;
 
@@ -39,4 +38,4 @@
     align-items: center;
     flex-direction: row;
     gap: 1vw;
-}
+} */
